# Automotive-NLP

./: Readme.md  feedbacks.db  pyproject.toml  spacy-script.py
src/automotive_nlp/: __init__.py  cli.py
src/automotive_nlp/db/: __init__.py  database.py  models.py  schemas.py
src/automotive_nlp/nlp/: __init__.py  preprocess.py  sentiment.py
src/automotive_nlp/services/: __init__.py  analysis_service.py  feedback_service.py
