[tool.poetry]
name = "automotive-nlp"
version = "0.1.0"
description = "NLP-powered feedback clustering and dynamic pricing system for automotive industry."
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{ include = "automotive_nlp", from = "src" }]

[tool.poetry.dependencies]
python = "^3.10"

# Core
SQLAlchemy = "^2.0"
pydantic = "^2.0"
typer = "^0.9"

# NLP
spacy = "^3.7"
textblob = "^0.18"

# ML / Clustering
scikit-learn = "^1.3"
scipy = "^1.11"
pandas = "^2.0"

# API
fastapi = "^0.103"
uvicorn = "^0.23"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4"

[tool.poetry.scripts]
automotive-nlp = "automotive_nlp.cli:app"

